welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: not found: value faireV
faireV() {for(a<-1 to 2) {avance();baisseBrosse();leveBrosse();avance();}}
^